--- a/《构建高可用Linux服务器》第3章/Vagrantfile
+++ b/《构建高可用Linux服务器》第3章/Vagrantfile
@@ -5,8 +5,8 @@ Vagrant.configure("2") do |config|
       v.cpus = 4
     end
     vb.vm.host_name = "server"
-    vb.vm.network :private_network, ip: "10.0.2.16"
-    vb.vm.box = "centos63"
+    vb.vm.network :public_network, ip: "10.0.15"
+    vb.vm.box = "centos67"
   end
 
 
@@ -16,8 +16,8 @@ Vagrant.configure("2") do |config|
       v.cpus = 4
     end
     vb.vm.host_name = "vagrant1"
-    vb.vm.network :private_network, ip: "10.0.2.17"
-    vb.vm.box = "centos63"
+    vb.vm.network :public_network, ip: "10.0.0.16"
+    vb.vm.box = "centos67"
   end
 
   config.vm.define  "vagrant2" do |vb|
@@ -26,7 +26,7 @@ Vagrant.configure("2") do |config|
       v.cpus = 4
     end
     vb.vm.host_name = "vagrant2"
-    vb.vm.network :private_network, ip: "10.0.2.18"
-    vb.vm.box = "centos63"
+    vb.vm.network :public_network, ip: "10.0.0.17"
+    vb.vm.box = "centos67"
   end
 end
